// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Participant should fail to find 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="sc-AxirZ kMHTdH relative"
    >
      <label
        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
        data-testid="FormLabel"
        for="address"
      >
        Sender
        <div
          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          class="relative flex items-center w-full text-left"
          data-testid="SelectRecipient__wrapper"
        >
          <div
            class="absolute left-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-3"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
          </div>
          <input
            aria-invalid="true"
            class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
            data-testid="SelectRecipient__input"
            name="address"
            type="text"
            value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
          />
          <div
            class="absolute flex items-center space-x-3 cursor-pointer right-4"
            data-testid="SelectRecipient__select-contact"
          >
            <div
              class="sc-AxhUy hSYVGy"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="text-sm text-theme-danger"
      >
        Failed to find
      </p>
    </fieldset>
    <button
      class="sc-AxjAm fPpool w-full"
      color="primary"
      data-testid="LinkCollection__add-link"
      type="button"
    >
      Add Link
    </button>
    <div
      class="sc-fzoyAV dtgZXc"
    >
      <div
        class="sc-fznKkj iLZSgh"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Amount
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail with cold wallet 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="sc-AxirZ kMHTdH relative"
    >
      <label
        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
        data-testid="FormLabel"
        for="address"
      >
        Sender
        <div
          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          class="relative flex items-center w-full text-left"
          data-testid="SelectRecipient__wrapper"
        >
          <div
            class="absolute left-1"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-3"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                  title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                />
              </div>
            </div>
          </div>
          <input
            aria-invalid="true"
            class="sc-AxgMl jRvGoE overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
            data-testid="SelectRecipient__input"
            name="address"
            type="text"
            value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
          />
          <div
            class="absolute flex items-center space-x-3 cursor-pointer right-4"
            data-testid="SelectRecipient__select-contact"
          >
            <div
              class="sc-AxhUy hSYVGy"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="text-sm text-theme-danger"
      >
        Not found Public Key
      </p>
    </fieldset>
    <button
      class="sc-AxjAm fPpool w-full"
      color="primary"
      data-testid="LinkCollection__add-link"
      type="button"
    >
      Add Link
    </button>
    <div
      class="sc-fzoyAV dtgZXc"
    >
      <div
        class="sc-fznKkj iLZSgh"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Avatar
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Address
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Amount
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
